vlib/v/checker/tests/par_expr_assgin_void_right_type_err.out
vlib/v/checker/tests/par_expr_assign_void_right_type_err.vv:1:3: error: assignment mismatch: 1 variable(s) but `print()` does not return a value
    1 | _ := (print(10))
      |   ~~
